Refactor LayoutTableCell::Has(Start|End)BorderAdjoinjingTable() and add test

This is a preparation of collapsed border optimization
(https://codereview.chromium.org/2805103003/)
and bug fixing (later).

BUG=626748

Review-Url: https://codereview.chromium.org/2842123003
Cr-Commit-Position: refs/heads/master@{#467516}

Former-commit-id: aa7d0c4d11c57a4a26a2e0a18fa1a23d60be7117