third_party/WebKit/Source/core/layout/LayoutTableCell.h
@@ -350,6 +350,8 @@ class CORE_EXPORT LayoutTableCell final : public LayoutBlockFlow {
                             const LayoutRect& container_rect) const override;
 
  private:
+  friend class LayoutTableCellTest;
+
   bool IsOfType(LayoutObjectType type) const override {
     return type == kLayoutObjectTableCell || LayoutBlockFlow::IsOfType(type);
   }
@@ -382,6 +384,8 @@ class CORE_EXPORT LayoutTableCell final : public LayoutBlockFlow {
     SetIntrinsicPaddingAfter(after);
   }
 
+  inline bool IsInStartColumn() const;
+  inline bool IsInEndColumn() const;
   bool HasStartBorderAdjoiningTable() const;
   bool HasEndBorderAdjoiningTable() const;
 
